--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,8 +8,18 @@ services:
       - "8002:8002"
     networks:
       - currency-network
+    depends_on:
+      - naming-server 
+    environment:
+      EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: http://naming-server:8761/eureka
 
+  naming-server:
+      image: 'elfn/springcloud-naming-server:0.0.1-SNAPSHOT'
+      mem_limit: 700m
+      ports:
+        - "8761:8761"
+      networks:
+        - currency-network
+            
 networks:
-  currency-network: 
-
-
+  currency-network:
