--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,10 +14,22 @@ services:
       EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: http://naming-server:8761/eureka
       
   currency-conversion:
-    image: 'elfn/springcloud-conversion:0.0.1-SNAPSHOT'
+    image: 'elfn/springcloud-currency-conversion:0.0.1-SNAPSHOT'
     mem_limit: 700m
     ports:
       - "8100:8100"
+    networks:
+      - currency-network
+    depends_on:
+      - naming-server 
+    environment:
+      EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: http://naming-server:8761/eureka
+
+  api-gateway:
+    image: 'elfn/springcloud-api-gateway:0.0.1-SNAPSHOT'
+    mem_limit: 700m
+    ports:
+      - "8765:8765"
     networks:
       - currency-network
     depends_on:
