--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,8 +10,13 @@ services:
       - currency-network
     depends_on:
       - naming-server 
+      - rabbitmq
     environment:
       EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: http://naming-server:8761/eureka
+      SPRING.ZIPKIN.BASEURL: http://zipkin-server:9411/
+      RABBIT_URI: amqp://guest:guest@rabbitmq:5672
+      SPRING_RABBITMQ_HOST: rabbitmq
+      SPRING_ZIPKIN_SENDER_TYPE: rabbit
       
   currency-conversion:
     image: 'elfn/springcloud-currency-conversion:0.0.1-SNAPSHOT'
@@ -22,9 +27,14 @@ services:
       - currency-network
     depends_on:
       - naming-server 
+      - rabbitmq
     environment:
       EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: http://naming-server:8761/eureka
-
+      SPRING.ZIPKIN.BASEURL: http://zipkin-server:9411/
+      RABBIT_URI: amqp://guest:guest@rabbitmq:5672
+      SPRING_RABBITMQ_HOST: rabbitmq
+      SPRING_ZIPKIN_SENDER_TYPE: rabbit
+      
   api-gateway:
     image: 'elfn/springcloud-api-gateway:0.0.1-SNAPSHOT'
     mem_limit: 700m
@@ -34,8 +44,13 @@ services:
       - currency-network
     depends_on:
       - naming-server 
+      - rabbitmq
     environment:
       EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: http://naming-server:8761/eureka
+      SPRING.ZIPKIN.BASEURL: http://zipkin-server:9411/
+      RABBIT_URI: amqp://guest:guest@rabbitmq:5672
+      SPRING_RABBITMQ_HOST: rabbitmq
+      SPRING_ZIPKIN_SENDER_TYPE: rabbit
 
   naming-server:
       image: 'elfn/springcloud-naming-server:0.0.1-SNAPSHOT'
@@ -44,6 +59,29 @@ services:
         - "8761:8761"
       networks:
         - currency-network
+ 
+ #docker run -p 9411:9411 -d openzipkin/zipkin:2.23    
+  zipkin-server:
+    image: openzipkin/zipkin:2.23
+    mem_limit: 300m
+    ports:
+      - "9411:9411"
+    networks:
+      - currency-network 
+    environment:
+      RABBIT_URI: amqp://guest:guest@rabbitmq:5672
+    depends_on:
+      - rabbitmq
+    restart: always #Restart if there is a problem starting up
+ 
+  rabbitmq:
+    image: rabbitmq:3.8.12-management
+    mem_limit: 300m
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    networks:
+      - currency-network 
             
 networks:
   currency-network:
